--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChooseYourOwnAdventure">
-        <activity android:name=".ui.GameActivity"></activity>
+        <activity android:name=".ui.CreditsActivity"></activity>
+        <activity android:name=".ui.StatisticsActivity" />
+        <activity android:name=".ui.SettingsActivity" />
+        <activity android:name=".ui.GameActivity" />
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.LauncherActivity">
             <intent-filter>
